--- a/ShipperHN.Web/Views/_Data.cshtml
+++ b/ShipperHN.Web/Views/_Data.cshtml
@@ -8,10 +8,10 @@
     if (Model.Count > 0)
     {
         bottomTime = Model[Model.Count - 1].InsertTime;
-        lastPostId = Model[Model.Count - 1].Idpost;
+        lastPostId = Model[Model.Count - 1].PostId;
 
         topTime = Model[0].InsertTime;
-        firstPostId = Model[0].Idpost;
+        firstPostId = Model[0].PostId;
     }
 }
 
