--- a/ShipperHN.Web/Views/_SearchPostResult.cshtml
+++ b/ShipperHN.Web/Views/_SearchPostResult.cshtml
@@ -14,7 +14,7 @@ else
     {
         <article class="underline">
             <div class="post-preview">
-                <a class="post-avatar" href=@string.Format("https://www.facebook.com/" + @post.User.Id)><img src=@string.Format(@post.User.AvataLink) alt="Avatar" /></a>
+                <a class="post-avatar" href=@string.Format("https://www.facebook.com/" + @post.User.Id)><img src=@string.Format("https://graph.facebook.com/" + @post.User.UserId + "/picture?type=square") alt="Avatar" /></a>
                 <a class="post-name">@post.User.Name</a>
                 @if (post.User.PhoneNumbers.Count > 0)
                 {
@@ -30,16 +30,16 @@ else
                 <div class="post-content-message">
                     @if (post.Message.Length > 120)
                     {
-                        <a onclick='GetPost("@post.Idpost")'>@string.Format(@post.Message.Substring(0, 120) + "...")</a>
+                        <a onclick='GetPost("@post.PostId")'>@string.Format(@post.Message.Substring(0, 120) + "...")</a>
                     }
                     else
                     {
-                        <a onclick='GetPost("@post.Idpost")'>@post.Message</a>
+                        <a onclick='GetPost("@post.PostId")'>@post.Message</a>
                     }
                 </div>
                 @if (!string.IsNullOrEmpty(post.FullPicture))
                     {
-                    <a class="full-picture" onclick='GetPost("@post.Idpost")'><img src=@string.Format(@post.FullPicture) alt="Full Picture" /></a>
+                    <a class="full-picture" onclick='GetPost("@post.PostId")'><img src=@string.Format(@post.FullPicture) alt="Full Picture" /></a>
                 }
 
                 <div class="post-places">
