--- a/ShipperHN.Web/Views/Post/index.cshtml
+++ b/ShipperHN.Web/Views/Post/index.cshtml
@@ -6,21 +6,21 @@
 }
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
 
   <meta charset="utf-8" />
   <title>ShipperHN</title>
   <link rel="icon" type="image/png" href="/Content/images/new-logo.png" />
-  <meta name="keywords" content="ship,shipper,shipperhn" />
-  <meta name="description" content="ShipperHN - Mang đơn ship tới chân giường shipper!" />
+  <meta name="keywords" content="ship, shipper, shipperhn, ship hàng, tìm ship, ship nhanh" />
+  <meta name="description" content="ShipperHN - Tìm Ship nhanh nhất - Nhận Ship nhanh nhất!" />
   @Styles.Render("/bundles/css")
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="ShipperHN - Mang đơn ship tới chân giường shipper!" />
+  <meta property="og:title" content="ShipperHN" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://shipperhn.com/" />
-  <meta property="og:image" content="http://shipperhn.com/Content/images/thumb.jpg" />
+  <meta property="og:image" content="http://shipperhn.com//Content/images/thumb.png" />
   <meta property="og:description" content="ShipperHN - Tìm Ship nhanh nhất - Nhận Ship nhanh nhất!" />
 
 </head>
